--- a/src/views/About/about.scss
+++ b/src/views/About/about.scss
@@ -16,3 +16,26 @@ li.item {
     cursor: pointer;
   }
 }
+
+.block {
+  margin: 25px 0;
+  width: 200px;
+  height: 200px;
+  background: #333;
+  border-radius: 10px;
+  color: white;
+}
+
+.item-enter {
+  opacity: 0;
+}
+
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
